--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 <body>
 	<header class="header">
 		<div class="container">
-			<h1>CSS Dinner Shopping List</h1>
-			<p>Let’s go to the mall!</p>
+			<div class="title">
+				<h1>CSS Dinner Shopping List</h1>
+				<p>Let’s go to the mall!</p>
+			</div>
 		</div>
 	</header>
 	<main>
@@ -77,7 +79,7 @@
 					</li>
 				</ul>
 				<div class="bon">
-					<p>
+					<p class="bon-title">
 						Bon appetit :)
 					</p>
 				</div>
